# MyTravel

./: .gitignore
Docs/: MyTravel-AI-Role.md  MyTravel-API-Deployment-Railway.md  MyTravel-Implementation-Plan.md  MyTravel-Integrations-and-Hosting-Costs.md  MyTravel-MVP1-Implementation-Steps.md  MyTravel-MVP1-Review-Scope.md  MyTravel-PRD.md  MyTravel-Technical-Solution-Document.md  MyTravel-Vercel-Deployment-Guide.md
app/: .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
app/api/: .env.example  Dockerfile  main.py  pyproject.toml
app/api/alembic/: env.py
app/api/alembic/versions/: b3e7f92a1d05_add_accommodation_type_to_trips.py  fd26b1ce2c9b_initial_schema.py
app/api/app/: auth.py  config.py  db.py
app/api/app/dependencies/: auth.py
app/api/app/models/: __init__.py  trip.py  user.py
app/api/app/routers/: auth.py  itinerary.py  oauth.py  share.py  trips.py
app/api/app/schemas/: auth.py  itinerary.py  trip.py
app/api/app/services/: generation_cap.py  images.py
app/api/app/services/ai/: itinerary.py  weather.py
app/api/app/services/email/: resend.py
app/api/app/services/maps/: mapbox.py
app/web/: .env.local.example  next.config.ts  package.json  vercel.json
app/web/src/app/: globals.css  layout.tsx  page.tsx
app/web/src/context/: auth.tsx
app/web/src/hooks/: useItineraryStream.ts
demo/: compare.html  concierge.html  cottage-detail.html  cottages.html  dashboard.html  index.html  itinerary.html  login.html  new-trip.html  packing.html  register.html  share.html  trip-completed.html
demo/css/: shared.css
(+27 files in other folders)
